--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Create Shapes",
-  "api": "1.0.0",
-  "main": "code.js",
-  "editorType": ["figma"],
-  "ui": "index.html"
+    "name": "Swift Pages",
+    "api": "1.0.0",
+    "main": "code.js",
+    "editorType": ["figma"],
+    "ui": "index.html"
 }
