--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,5 +3,6 @@
     "api": "1.0.0",
     "main": "code.js",
     "editorType": ["figma"],
-    "ui": "index.html"
+    "ui": "index.html",
+    "id": "1243840737950472379"
 }
